From 4deafc2 (closure-adv):
==========================

In prisim/closure.py,

(*) In function npz2hdf5(), update LST parsing. Add key 'lst-day' to
HDF5 file

From a249439 (closure-adv):
==========================

In prisim/closure.py,

(*) In member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum, add input keyword cohax to specify axes along
which coherent averaging of clousre phases can be performed. Update
member function docstring accordingly
(*) Change default for keyword input incohax in member function
compute_power_spectrum() of class ClosurePhaseDelaySpectrum. Update
member function docstring accordingly
(*) In member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum, perform coherent averaging of closure phase
delay spectra before incoherent averaging of closure phase delay power
spectra

From 45acc97 (closure-adv):
==========================

In prisim/closure.py,

(*) In member function subset() of class ClosurePhaseDelaySpectrum,
update functionality to select and return indices of triads, LST, and
days. Update member function docstring accordingly.
(*) In member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum, update call to member function subset()
based on the changes above. Update member function docstring
accordingly
(*) In member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum, update the vaiable named results

From 6d690c1 (closure-adv):
==========================

In prisim/closure.py,

(*) In member function smooth_in_tbins() of class ClosurePhase,
make corrections in LST and Day binning
(*) In member function FT() of class ClosurePhaseDelaySpectrum,
update with processing the right axes. Update member function
docstring accordingly

From a376965 (closure-adv):
==========================

In prisim/closure.py,

(*) Import Time module from astropy
(*) In function npz2hdf5(), read in LST and days as instances of
astropy Time class